# ort-sample

./: .gitignore  Cargo.toml
.github/workflows/: build-rust.yaml
src/: gui.rs  lib.rs  log.rs  main.rs  runtime.rs
